# SwarmGym

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: experiment_config.json  run_greedy.py  run_random.py
studio/: app.js  index.html  styles.css
swarmgym/: __init__.py
swarmgym/baselines/: __init__.py  greedy_policy.py  random_policy.py
swarmgym/core/: __init__.py  grid.py  metrics.py  renderer.py
swarmgym/envs/: __init__.py  cooperative_search.py
swarmgym/experiments/: __init__.py  cli.py  config.py  policies.py  runner.py
tests/: test_cooperative_search.py  test_experiments.py
