[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmgym"
version = "0.1.0"
description = "PettingZoo multi-agent cooperative search environments for robot swarms."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SwarmGym Contributors" }
]
keywords = [
    "multi-agent reinforcement learning",
    "robotics",
    "swarm robotics",
    "PettingZoo",
    "Gymnasium",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pettingzoo>=1.24",
]

[project.scripts]
swarmgym-run = "swarmgym.experiments.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["swarmgym*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
